[tool.poetry]
name = "gpt-code-reviewer"
version = "0.1.0"
description = "GPT Code Reviewer"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpt_code_reviewer"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
argparse = "^1.4.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"
tenacity = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
